@@ -1,30 +1,17 @@
+
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
 data/GNOME_Gedit.server.in
 data/gedit.desktop.in
 data/gedit.keys.in
 data/gedit.schemas.in
-plugins/docinfo/docinfo.c
-plugins/docinfo/docinfo.glade2
-plugins/docinfo/docinfo.gedit-plugin.desktop.in
-plugins/sample/sample.c
-plugins/sample/sample.gedit-plugin.desktop.in
-plugins/time/time.c
-plugins/time/time.glade2
-plugins/time/time.gedit-plugin.desktop.in
-plugins/spell/gedit-automatic-spell-checker.c
-plugins/spell/gedit-spell-checker-dialog.c
-plugins/spell/gedit-spell-checker.c
-plugins/spell/gedit-spell-language-dialog.c
-plugins/spell/spell.gedit-plugin.desktop.in
-plugins/spell/languages-dialog.glade2
-plugins/spell/spell-checker.glade2
-plugins/spell/spell.c
 gedit/bonobo-mdi-child.c
 gedit/bonobo-mdi.c
 gedit/dialogs/gedit-dialog-goto-line.c
 gedit/dialogs/gedit-dialog-replace.c
 gedit/dialogs/gedit-dialog-uri.c
+gedit/dialogs/gedit-encodings-dialog.c
+gedit/dialogs/gedit-encodings-dialog.glade2
 gedit/dialogs/gedit-plugin-manager.c
 gedit/dialogs/gedit-plugin-program-location-dialog.c
 gedit/dialogs/gedit-preferences-dialog.c
@@ -39,11 +26,14 @@ gedit/dialogs/uri.glade2
 gedit/gedit-commands.c
 gedit/gedit-debug.c
 gedit/gedit-document.c
+gedit/gedit-encodings-option-menu.c
+gedit/gedit-encodings.c
 gedit/gedit-file-selector-util.c
 gedit/gedit-file.c
 gedit/gedit-mdi-child.c
 gedit/gedit-mdi.c
 gedit/gedit-menus.c
+gedit/gedit-output-window.c
 gedit/gedit-plugins-engine.c
 gedit/gedit-prefs-manager.c
 gedit/gedit-print.c
@@ -52,13 +42,24 @@ gedit/gedit-ui.xml
 gedit/gedit-utils.c
 gedit/gedit-view.c
 gedit/gedit2.c
-gedit/gedit-output-window.c
-gedit/recent-files/egg-recent-view-bonobo.c
-gedit/dialogs/gedit-encodings-dialog.c
-gedit/dialogs/gedit-encodings-dialog.glade2
-gedit/gedit-encodings.c
 gedit/recent-files/egg-recent-vfs-utils.c
+gedit/recent-files/egg-recent-view-bonobo.c
+plugins/docinfo/docinfo.c
+plugins/docinfo/docinfo.gedit-plugin.desktop.in
+plugins/docinfo/docinfo.glade2
+plugins/sample/sample.c
+plugins/sample/sample.gedit-plugin.desktop.in
+plugins/spell/gedit-automatic-spell-checker.c
+plugins/spell/gedit-spell-checker-dialog.c
+plugins/spell/gedit-spell-checker.c
+plugins/spell/gedit-spell-language-dialog.c
+plugins/spell/languages-dialog.glade2
+plugins/spell/spell-checker.glade2
+plugins/spell/spell.c
+plugins/spell/spell.gedit-plugin.desktop.in
+plugins/time/time.c
+plugins/time/time.gedit-plugin.desktop.in
+plugins/time/time.glade2
 viewer/gedit-factory.c
 viewer/gedit-persist-stream.c
 viewer/gedit-viewer-ui.xml
-
