@@ -1,3 +1,7 @@
+2003-05-27  Abel Cheung  <maddog@linux.org.hk>
+
+	* POTFILES.in: Added gedit/gedit-encodings-option-menu.c
+
 2003-05-26  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
         
         * es.po: Updated Spanish translation by
